--- a/jennifer/mentaldisorderclick-2.html
+++ b/jennifer/mentaldisorderclick-2.html
@@ -10,6 +10,45 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    .stories-image {
+	width: 100%;
+	background-image: url('images/anxiety.jpg');
+	background-size: 100%;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
+}
+
+.text-grid {
+    padding-top: 20vh;
+    padding-bottom: 20px;
+    font-size: 30px;
+    height: 20;
+    background-position: center;
+    text-align: center;
+    background-color: #ed9c9d;
+}
+#grid-item a h2 {
+    color:white;
+}
+#text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: left;
+        bottom: 0;
+        left: 0;
+        font-family: titleBold;
+    }
+
+.grid-item p {
+        padding: 0;
+}
+.grid-item:hover p {
+	opacity: 1;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -75,7 +114,6 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
@@ -98,28 +136,28 @@
 <p style="font-family:titleBold;"><b>Treatments</b></p>
 <p>Most people with the condition try one or more of these therapies:</p>
 <ul>
-    <li>Medication: Many antidepressants can work for anxiety disorders. They include escitalopram (Lexapro) and fluoxetine (Prozac). Certain anticonvulsant medicines (typically taken for epilepsy) and low-dose antipsychotic drugs can be added to help make other treatments work better. Anxiolytics are also drugs that help lower anxiety. Examples are alprazolam (Xanax) and clonazepam. They’re prescribed for social or generalized anxiety disorder as well as for panic attacks.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Medication: Many antidepressants can work for anxiety disorders. They include escitalopram (Lexapro) and fluoxetine (Prozac). Certain anticonvulsant medicines (typically taken for epilepsy) and low-dose antipsychotic drugs can be added to help make other treatments work better. Anxiolytics are also drugs that help lower anxiety. Examples are alprazolam (Xanax) and clonazepam. They’re prescribed for social or generalized anxiety disorder as well as for panic attacks.</li>
 </ul>
 <ul>
-    <li>Psychotherapy: This is a type of counseling that addresses the emotional response to mental illness. A mental health specialist helps you by talking about how to understand and deal with your anxiety disorder.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Psychotherapy: This is a type of counseling that addresses the emotional response to mental illness. A mental health specialist helps you by talking about how to understand and deal with your anxiety disorder.</li>
 </ul>
             </div>
         </div>
     </div>
-    <div class="more-stories">
-        <button class="button-stories">
-            Other Stories
+    <div class="more-stories more-stories-click">
+        <button class="button-stories button-stories-click">
+            Other Disorders
         </button>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
         </div>
     </div>
     <div class="magazine-health" style="grid-template-columns: 1.5fr 1.5fr; height:25vw;">
