--- a/jennifer/mentaldisorderclick-5.html
+++ b/jennifer/mentaldisorderclick-5.html
@@ -10,6 +10,44 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    .stories-image {
+	width: 100%;
+	background-image: url('images/anger.jpg');
+	background-size: 100%;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
+}
+.text-grid {
+    padding-top: 20vh;
+    padding-bottom: 20px;
+    font-size: 30px;
+    height: 20;
+    background-position: center;
+    text-align: center;
+    background-color: #ed9c9d;
+}
+#grid-item a h2 {
+    color:white;
+}
+#text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: left;
+        bottom: 0;
+        left: 0;
+        font-family: titleBold;
+    }
+
+.grid-item p {
+        padding: 0;
+}
+.grid-item:hover p {
+	opacity: 1;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -75,7 +113,6 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
@@ -87,19 +124,19 @@
                 <p style="font-family:titleBold;">How Can I Manage Anger?</p>
 <p>When you’re angry, you might feel anywhere between a slight irritation to rage.</p>
 <ul>
-    <li>When you start feeling angry, try deep breathing, positive self-talk, or stopping your angry thoughts. Breathe deeply from your diaphragm. Slowly repeat a calm word or phrase such as "relax" or "take it easy." Repeat it to yourself while breathing deeply until the anger subsides.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">When you start feeling angry, try deep breathing, positive self-talk, or stopping your angry thoughts. Breathe deeply from your diaphragm. Slowly repeat a calm word or phrase such as "relax" or "take it easy." Repeat it to yourself while breathing deeply until the anger subsides.</li>
 </ul>
 <ul>
-    <li>Although expressing anger is better than keeping it in, there’s a right way to do it. Try to express yourself clearly and calmly. Angry outbursts are stressful to your nervous and cardiovascular systems and can make health problems worse.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Although expressing anger is better than keeping it in, there’s a right way to do it. Try to express yourself clearly and calmly. Angry outbursts are stressful to your nervous and cardiovascular systems and can make health problems worse.</li>
 </ul>
 <ul>
-    <li>Avoid using recreational drugs and drinking too much alcohol, which can make you less able to handle frustration. Alcohol can also loosen your inhibitions so that you say or do something you normally wouldn’t.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Avoid using recreational drugs and drinking too much alcohol, which can make you less able to handle frustration. Alcohol can also loosen your inhibitions so that you say or do something you normally wouldn’t.</li>
 </ul>
 <ul>
-    <li>Practice good listening skills. Listening can help improve communication and can build trusting feelings between people. This trust can help you deal with potentially hostile emotions. A useful communication exercise is to say to someone, “Let me make sure I understand what you’re saying” and then restate back to them what you perceive as their main message or point of view. Often, this approach helps to clarify misunderstandings that can lead to frustrations, and help identify issues on which you may ultimately “agree to disagree” without turning into a fight.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Practice good listening skills. Listening can help improve communication and can build trusting feelings between people. This trust can help you deal with potentially hostile emotions. A useful communication exercise is to say to someone, “Let me make sure I understand what you’re saying” and then restate back to them what you perceive as their main message or point of view. Often, this approach helps to clarify misunderstandings that can lead to frustrations, and help identify issues on which you may ultimately “agree to disagree” without turning into a fight.</li>
 </ul>
 <ul>
-    <li>Learn to assert yourself, expressing your feelings calmly and directly without becoming defensive, hostile, or emotionally charged. Read self-help books or seek help from a professional therapist to learn how to use assertiveness and anger management skills.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">Learn to assert yourself, expressing your feelings calmly and directly without becoming defensive, hostile, or emotionally charged. Read self-help books or seek help from a professional therapist to learn how to use assertiveness and anger management skills.</li>
 </ul>
 <p style="font-family:titleBold;">What If I Can't Control My Anger?</p>
 <p>If you believe that your anger is out of control and is having a negative effect on your life and relationships, seek the help of a mental health professional. A psychologist or other licensed mental health professional can work with you to learn techniques for changing your thinking and your behavior. A mental health professional can help you deal with your anger in an appropriate way. Ask your doctor if medicines could be helpful. Sometimes, antidepressants, certain anticonvulsants, and low-dose antipsychotics can help manage sudden attacks of rage or anger. Avoid alcohol, short-acting benzodiazepines like Xanax, or street drugs that can make you say or do things more impulsively. Choose your therapist carefully, and make sure to talk to a professional who is trained to teach anger management and assertiveness skills.</p>
@@ -110,15 +147,16 @@
             Other Stories
         </button>
     </div>
+</div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
         </div>
     </div>
     <div class="magazine-health" style="grid-template-columns: 1.5fr 1.5fr; height:25vw;">
