--- a/jennifer/stories.html
+++ b/jennifer/stories.html
@@ -13,9 +13,10 @@
     #text-desc {
         position: absolute;
         width: 100%;
-        text-align: center;
+        text-align: left;
         bottom: 0;
         left: 0;
+        font-family: titleBold;
     }
 
     .grid-item p {
@@ -86,30 +87,30 @@
         </div>
     </div>
     <div class="magazine-health">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;" >
-            <p id="text-desc" style="width: 100%; background-color: yellow;">Navigating people to better mental health</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-click-image1.jpg'); background-size: cover;" >
+            <p id="text-desc" style="width: 100%; background-color: #3CB371;">Navigating people to better mental health</p>
             <img src="http://your-image.jpg" style="visibility: hidden;" />
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-2-foto-atas.jpg'); background-size: cover;">
+            <p id="text-desc" style="width: 100%; background-color: #FFA500;">Going Through the emotions</p>
         </div>
     </div>
     <div class="magazine-3-3" style="grid-template-columns: 1fr 1fr 1fr;">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-3-atas.jpeg'); background-size: cover;">
+            <p id="text-desc" style="width: 100%; background-color: #0000A0;">Hope and Help</p>
             
         </div>
         <div class="grid-immediate" id="grid-item2">
-            <img src="images/help.png" class="eyes">
+            <img src="images/help.png" class="eyes" style="	padding-top: 20px;">
             <p>Get Immediate Help</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-4-atas.jpg'); background-size: cover;">
+            <p id="text-desc" style="width: 100%; background-color: yellow;">Cornerstone of recovery</p>
         </div>
     </div>
     <div class="magazine-health" style="padding-top:0px;">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-5-atas.jpg'); background-size: cover;">
+            <p id="text-desc" style="width: 100%; background-color: #008000;">Students dont feel they are getting appropriate help online</p>
         </div>
         <div class="grid-immediate" id="grid-item2" style="background-color:#7851A9;">
             <p style="font-size:40px;">Mental Health <br>Disorders</br></p>
