--- a/jennifer/mentaldisorderclick-3.html
+++ b/jennifer/mentaldisorderclick-3.html
@@ -10,6 +10,45 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    .stories-image {
+	width: 100%;
+	background-image: url('images/stress.jpg');
+	background-size: 100%;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
+}
+.text-grid {
+    padding-top: 20vh;
+    padding-bottom: 20px;
+    font-size: 30px;
+    height: 20;
+    background-position: center;
+    text-align: center;
+    background-color: #ed9c9d;
+}
+
+#grid-item a h2 {
+    color:white;
+}
+#text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: left;
+        bottom: 0;
+        left: 0;
+        font-family: titleBold;
+    }
+
+.grid-item p {
+        padding: 0;
+}
+.grid-item:hover p {
+	opacity: 1;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -75,7 +114,6 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
@@ -97,33 +135,33 @@
 <p>Practicing self-care is important for reducing stress. Some good ways to reduce and manage stress include eating well, exercising regularly, trying to reduce negativity, prioritizing leisure time, limiting alcohol and caffeine, avoiding cigarettes and other drugs, and adopting proper sleep hygiene.</p>
 <p>Other ways to help reduce and cope with stress include:</p>
 <ul>
-    <li>prioritizing, organizing and delegating tasks</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">prioritizing, organizing and delegating tasks</li>
 </ul>
 <ul>
-    <li>seeking support from family and friends</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">seeking support from family and friends</li>
 </ul>
 <ul>
-    <li>attending a support group or stress management program, consulting a health care professional or accessing self-help materials.</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif; letter-spacing: 1px;">attending a support group or stress management program, consulting a health care professional or accessing self-help materials.</li>
 </ul>
 <p>Once a person feels a sense of emotional well-being, they feel stronger and able to bounce back from stress. This helps them feel that they can cope better with difficult life events. Severe stress may be a symptom of an anxiety disorder.</p>
 <p>Seek professional help if the signs and symptoms of stress have been present for a long period of time; if your functioning at work, school, home or socially is affected; or if you experience increasing stress and emotional difficulties.Recovery from chronic stress is possible.</p>
             </div>
         </div>
     </div>
-    <div class="more-stories">
-        <button class="button-stories">
-            Other Stories
+    <div class="more-stories more-stories-click">
+        <button class="button-stories button-stories-click">
+            Other Disorders
         </button>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
         </div>
     </div>
     <div class="magazine-health" style="grid-template-columns: 1.5fr 1.5fr; height:25vw;">
