--- a/jennifer/stories-click-2.html
+++ b/jennifer/stories-click-2.html
@@ -9,6 +9,28 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    .stories-image {
+	width: 100%;
+	background-image: url('images/stories-2-foto-atas.jpg');
+	background-size: cover;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
+}
+#text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: left;
+        bottom: 0;
+        left: 0;
+        font-family: titleBold;
+    }
+.grid-item:hover p {
+	opacity: 1;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -99,7 +121,7 @@
 <p>Do my music. It really is my therapy. I think just writing. Documenting what’s going on in my life. It’s kind of like a diary where I can unload all of the stuff that I want to talk about. And again, just</p>
 <p>looking after, it’s just the same answer really, like if you kind of try and make a conscious effort to be more selfless in your day to day life with even people on the street and friends. You know if you like</p>
 <p>smile, you know that thing where just smiling at someone a day, stuff like that. There’s a lot, you can adopt a lot of little habits like that and make it into your mantra and that makes you, probably makes you happy. I think so. I think everything’s just trial and error.</p>
-<img src="images/pjimage.jpg" style="display: block; margin-right: auto; margin-left: auto;">
+<img src="images/stories-2-center.jpg" style="display: block; margin-right: auto; margin-left: auto;">
 <p>I think probably people will just be like ‘eat well, eat healthy food, set goals’, but I think that, was it someone saying that the main things that a person needs to be mentally stable is that you need to feel wanted or something or that you need to have a purpose? And something else. I think those </p>
 <p>things are pretty imperative to good mental health. I mean whether feeling wanted is somebody having somebody to love or having just being loved in return and purpose is well. I don’t know. You can get purpose from anything can’t you. Because even doing my music and stuff like that, that is </p>
 <p>purpose but it’s not like, I don’t think it’s as important as something like having a kid or something, that’s real. That’s purpose. That’s real responsibility. That’s life changing. I’ve got to guide this little creature through this shit storm. So, yeah. I think I would like to be good at that. That’s purpose.</p>
@@ -117,14 +139,14 @@
         </button>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
         </div>
     </div>
 <div class="footer">
