--- a/jennifer/stories-click-4.html
+++ b/jennifer/stories-click-4.html
@@ -9,6 +9,31 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    .stories-image {
+	width: 100%;
+	background-image: url('images/stories-4-atas.jpg');
+	background-size: 100%;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
+}
+#text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: left;
+        bottom: 0;
+        left: 0;
+        font-family: titleBold;
+    }
+.grid-item:hover p {
+	opacity: 1;
+}
+.page-container p {
+    letter-spacing: 2px;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -74,7 +99,6 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
@@ -95,14 +119,14 @@
         </button>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover;">
-            <p id="text-desc">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
         </div>
     </div>
     <div class="footer">
